force-app/main/default/src/objects/HealthCloudGA__EhrCarePlan__c/HealthCloudGA__EhrCarePlan__c.object-meta.xml
<CustomObject>
    <description>Describes the intention of how one or more practitioners intend to deliver care for a particular patient for a period of time, possibly limited to care for a specific condition or set of conditions.</description>
    <label>EHR Care Plan</label>
    <nameField>
        <displayFormat>Plan-{0}</displayFormat>
        <label>EHR Care Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Care Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>