force-app/main/default/src/objects/HealthCloudGA__EhrCarePlan__c/fields/HealthCloudGA__Account__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual account which represents the patient in force.com</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EHR Care Plans</relationshipLabel>
    <relationshipName>CarePlans</relationshipName>
    <type>Lookup</type>
</CustomField>