force-app/main/default/src/objects/HealthCloudGA__EhrCarePlan__c/fields/HealthCloudGA__Notes__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>