force-app/main/default/src/objects/HealthCloudGA__EhrCarePlan__c/fields/HealthCloudGA__Patient__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
    <relationshipLabel>Care Plans</relationshipLabel>
    <relationshipName>CarePlans</relationshipName>
    <type>Lookup</type>
</CustomField>