force-app/main/default/src/objects/HealthCloudGA__EhrCarePlan__c/fields/HealthCloudGA__Status__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>